# scallop

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
.github/workflows/: ci.yml
builtins/: Cargo.toml
builtins/src/: base.rs  lib.rs  pkgcraft.rs
examples/: scallop.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
rust/: Cargo.toml  bash-wrapper.h  build.rs
rust/bash/: command.h  execute_cmd.h  variables.h
rust/src/: bash.rs  error.rs  lib.rs  main.rs
rust/src/bash/: bindings.rs  builtins.rs  command.rs
rust/src/bash/builtins/: has.rs  hasv.rs  pkg.rs  profile.rs  ver_cut.rs  ver_rs.rs  ver_test.rs
rust/src/bash/builtins/pkg/: hasv.rs  ver_cut.rs  ver_rs.rs  ver_test.rs
scallop/: Cargo.toml  bash-wrapper.h  build.rs
scallop-builtins/: Cargo.toml
scallop-builtins/benches/: bench  pkgcore.bash
scallop-builtins/src/: base.rs  lib.rs  pkg.rs  pkgcraft.rs
scallop/src/: bash.rs  bindings.rs  builtins.rs  command.rs  error.rs  lib.rs  main.rs  source.rs  traits.rs  variables.rs
scallop/src/bash/builtins/pkg/: has.rs  ver_cut.rs
scallop/src/builtins/: pkg.rs  profile.rs
scallop/src/builtins/pkg/: assert.rs  die.rs  export_functions.rs  has.rs  hasv.rs  nonfatal.rs  ver_cut.rs  ver_rs.rs  ver_test.rs
scripts/: build-libbash
src/: bash.rs  builtins.rs  command.rs  demo.c  error.rs  functions.rs  lib.rs  main.rs  meson.build  scallop.c  scallop.h  shell.rs  source.rs  test.rs  traits.rs  variables.rs
src/bash/: internal.rs
src/builtins/: _bash.rs  command_not_found_handle.rs  profile.rs
