[package]
name = "scallop"
version = "0.0.1"
description = "Wrapper library for bash"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/scallop"
repository = "https://github.com/pkgcraft/scallop"
readme = "README.md"
license = "GPL-3"
edition = "2021"
rust-version = "1.60"
autotests = false

[features]
plugin = []
nls = []

[lib]
name = "scallop"
path = "src/lib.rs"

[[example]]
name = "scallop"

[dependencies]
bitflags = "1.3"
nix = "0.24"
once_cell = "1.8.0"
thiserror = "1.0.30"
tracing = "0.1"

[build-dependencies]
autotools = "0.2.4"
bindgen = "0.60.1"
num_cpus = "1.0"

[dev-dependencies]
ctor = "0.1.22"
tempfile = "3"
