[package]
name = "scallop-builtins"
version = "0.0.1"
description = "Various builtins for bash"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/scallop"
repository = "https://github.com/pkgcraft/scallop"
readme = "README.md"
license = "GPL-3"
edition = "2021"
rust-version = "1.56"
autotests = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pkg"]
pkg = ["pkgcraft"]

[dependencies]
scallop = { path = "../scallop", version = "0.0.1" }
pkgcraft = { path = "../../pkgcraft", version = "0.0.2", optional = true }
