[package]
name = "scallop"
version = "0.0.1"
description = "Wrapper library for bash"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/scallop"
repository = "https://github.com/pkgcraft/scallop"
readme = "README.md"
license = "GPL-3"
edition = "2021"
rust-version = "1.56"
autotests = false

[lib]
name = "scallop"
path = "src/lib.rs"

[[bin]]
bench = false
path = "src/main.rs"
name = "scallop"

[features]
default = ["pkg"]
pkg = ["pkgcraft", "peg", "regex"]

[dependencies]
once_cell = "1.8.0"
pkgcraft = { path = "../../pkgcraft", version = "0.0.2", optional = true }
peg = { version = "0.7", optional = true }
regex = { version = "1", optional = true }

[build-dependencies]
bindgen = "0.59.2"
